# hyperglass

./: .dockerignore  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  TRACEROUTE_RESTRUCTURE_SUMMARY.md  biome.json  compose-self.yaml  compose.yaml  debug_mikrotik_minimal.py  develop.py  docker-compose.build.yaml  docker-compose.yaml  example_community_names_config.yaml  go.mod  go.sum  grafana.json  hooks.sh  install.sh  main.go  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  screenshots.md  setup.cfg  setup.py  test_community_names.py  tools.go  validate_examples.py  (+1 more)
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-feature-request.md  1-feature-request.yaml  2-bug-report.md  2-bug-report.yaml  3-new-nos.yaml  bug_report.md  config.yml  feature_request.md
.github/workflows/: backend-lint.yml  backend.yml  docker-image.yml  docker.yml  frontend.yml  installer.yml  release-pypi.yml  tests.yml
.samples/: Caddyfile  arista_route.json  frr_bgp_community.json  frr_bgp_route.json  hyperglass-docker.service  hyperglass-manual.service  hyperglass.nginx  sample_  sample_config.yaml  sample_devices.yaml  sample_devices2  sample_devices_juniper.yaml  sample_directives_huawei  sample_directives_juniper  sample_directives_juniper.yaml  sample_directives_mikrotik  sample_hyperglass  sample_terms-and-conditions
.tests/: DockerfileUbuntu  devices.yaml  dockersetup.sh  ga-backend-app.sh  pre-commit-frontend.sh  validate_examples.py
.tests/app/: setup.sh
ci/: check_code.sh  ci_commit.sh  ci_dependencies.sh  ci_dev_server.py  ci_prepare.py  ci_prepare.sh  ci_test.py  ci_test_prepare.py  configuration.toml  devices.toml  push.sh
cli/: __init__.py  commands.py  echo.py  formatting.py  schema.py  static.py  util.py
cmd/: cmd.go
core/api/: api.go
core/controllers/: query.go
core/entities/: query.go
core/interfaces/: query.go
core/migrations/: auto.go
core/models/: common.go  credential.go  device.go  group.go  proxy.go
core/system/: dirs.go
docs/: .gitignore  caching.md  configuration.md  docusaurus.config.js  favicon-formats.ts  generateSitemap.js  global.d.ts  global.module.css  index.md  monitoring.md  next.config.js  next.config.mjs  package.json  platforms.json  pnpm-lock.yaml  ratelimiting.md  sidebars.js  theme.config.tsx  tsconfig.json
docs/components/: color.tsx  docs-button.tsx  not-supported-icon.tsx  platforms.tsx  supported-icon.tsx
docs/configuration/: authentication.md  blacklist.md  branding.md  commands.md  configuration.md  devices.md  features.md  frr-api.md  general.md  index.md  proxy.md  securing-router-access.md
docs/development/: index.md
docs/docs/: adding-devices.mdx  agent.mdx  api.mdx  cache.mdx  commands.mdx  configuration.mdx  devices.mdx  getting-started.mdx  introduction.mdx  license.mdx  logging.mdx  messages.mdx  parameters.mdx  platforms.mdx  production.mdx  queries.mdx  query-settings.mdx  response-caching.mdx  rest-api.mdx  setup.mdx  structured-data.mdx  styles.module.css  table-output.mdx  ui.mdx  upgrading.mdx
docs/extras/: common_as_path_regex.md  securing-router-access.md  supported-device-types.md
docs/installation/: installing-hyperglass.md  reverseproxy.md  systemd.md  wsgi.md
docs/pages/: _meta.json  _meta.tsx  basic-configuration.mdx  configuration.mdx  index.mdx  installation.mdx  introduction.mdx  license.mdx  platforms.mdx  plugins.mdx  user-guide.mdx
docs/screenshots/: index.mdx
docs/src/: prism-dracula.js
docs/static/: robots.txt  sitemap.xml
execution/drivers/: _construct.py
hyperglass/: .gitignore  TODO.md  __init__.py  _api.py  _exceptions.py  api.py  app.py  cache.py  cmd_construct.py  cmd_execute.py  cmd_parser.py  compat.py  console.py  constants.py  encode.py  exceptions.py  gunicorn_config.py.example  hyperglass.py  hyperglass.service.example  log.py  main.py  manage.py  models.py  query.py  settings.py  templates.py  types.py  util.py  vars.py  web.py  wsgi.py
hyperglass/api/: __init__.py  error_handlers.py  events.py  fake_output.py  middleware.py  routes.py  state.py  tasks.py
hyperglass/cache/: __init__.py  aio.py  base.py  sync.py
hyperglass/cli/: __init__.py  commands.py  echo.py  exceptions.py  formatting.py  installer.py  main.py  static.py  util.py
hyperglass/command/: .gitignore  __init__.py  construct.py  encode.py  execute-old.py  execute.py  parse.py  validate.py
hyperglass/compat/: __init__.py  _asyncio.py  _sshtunnel.py
hyperglass/config/: config.toml.example  devices.toml.example  gunicorn_config.py  requires_ipv6_cidr.toml.example
hyperglass/configuration/: .gitignore  __init__.py  blacklist.toml.example  collect.py  commands.toml.example  commands.yaml.example  configuration.toml.example  defaults.py  devices.toml.example  devices.yaml.example  hyperglass.yaml.example  load.py  main.py  markdown.py  models.py  validate.py  validation.py
hyperglass/defaults/: __init__.py  _strings.py
hyperglass/examples/: commands.yaml  devices.yaml  directives.yaml  hyperglass.docker.yaml  hyperglass.service  hyperglass.yaml
hyperglass/exceptions/: __init__.py  _common.py  private.py  public.py
hyperglass/execution/: __init__.py  construct.py  encode.py  enhanced.py  enrichment.py  execute.py  main.py  validate.py
hyperglass/frontend/: __init__.py
hyperglass/models/: __init__.py  directive.py  fields.py  main.py  query.py  response.py  rfc8522.py  system.py  ui.py  util.py  validators.py  webhook.py
hyperglass/parsing/: __init__.py  arista.py  common.py  juniper.py  linux.py  mikrotik.py  nos.py  test_arista.py  (+1 more)
tests/: check_code.sh  ci_commit.sh  ci_dev_server.py  ci_git.sh  ci_git_prep.sh  ci_git_push.sh  ci_prepare.py  ci_test.py  commands.toml  configuration.toml  configuration.yaml  devices.toml  devices.yaml  hyperglass.yaml  requirements_dev.txt
ui/: .gitignore  next.config.js  nextdev.js  package.json  theme.js  webpack.config.js
(+871 files in other folders)
